// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers .all() should return a list of all customers 1`] = `
Array [
  Customer {
    "createdDatetime": "2017-02-13T13:21:58.0Z",
    "email": "john.doe@example.org",
    "id": "cst_c24gk2t3G6",
    "locale": null,
    "metadata": null,
    "mode": "test",
    "name": "John Doe",
    "recentlyUsedMethods": Array [],
    "resource": "customer",
  },
]
`;

exports[`customers .all() should work with a callback 1`] = `
Array [
  Customer {
    "createdDatetime": "2017-02-13T13:21:58.0Z",
    "email": "john.doe@example.org",
    "id": "cst_c24gk2t3G6",
    "locale": null,
    "metadata": null,
    "mode": "test",
    "name": "John Doe",
    "recentlyUsedMethods": Array [],
    "resource": "customer",
  },
]
`;

exports[`customers .update() should return a customer instance 1`] = `
Customer {
  "createdDatetime": "2017-02-13T13:21:58.0Z",
  "email": "john.doe@example.org",
  "id": "cst_c24gk2t3G6",
  "locale": null,
  "metadata": null,
  "mode": "test",
  "name": "John Doe",
  "recentlyUsedMethods": Array [],
  "resource": "customer",
}
`;

exports[`customers .update() should work with a callback 1`] = `
Customer {
  "createdDatetime": "2017-02-13T13:21:58.0Z",
  "email": "john.doe@example.org",
  "id": "cst_c24gk2t3G6",
  "locale": null,
  "metadata": null,
  "mode": "test",
  "name": "John Doe",
  "recentlyUsedMethods": Array [],
  "resource": "customer",
}
`;
